# quiche_pantie_patch

./: .gitignore  Dockerfile  Procfile  convert.py  convert_all.py  convert_anna.py  convert_bra.py  convert_fourier.py  convert_fuzzy.py  convert_lua.py  convert_milk.py  convert_mishe.py  convert_shaclo.py  convert_tanu.py  convert_ukon.py  crop.py  docker-compose.yml  favorite.json  find_similar_pantie.py  install.bat  myutil.py  patch.py  patch_anna.py  patch_anna_light.py  patch_fuzzy.py  patch_lua.py  patch_lua_quest.py  patch_milk.py  patch_mishe.py  patch_shaclo.py  patch_tanu.py  patch_ukon.py  patcher.py  phase_retrieval.py  pull_patch.bat  pyproject.toml  readme.md  requirements.txt  restapi.py  update_all.py  (+1 more)
src/: bra.py  fourier.py  image_loader.py  phase_retrieval.py
src/avatars/: __init__.py  anna.py  anna_light.py  class_patcher.py  fuzzy.py  linz.py  lua.py  lua_quest.py  milk.py  mishe.py  quiche.py  quiche_light.py  quiche_nbody.py  shaclo.py  tanu.py  ukon.py
src/converters/: anna_light.py  lua_quest.py  shaclo.py
src/models/: __init__.py  aina.py  aina_quest.py  amanatsu.py  anna.py  anna_light.py  blanca.py  caronauff.py  carti.py  cc0.py  chiharu.py  chronos.py  class_patcher.py  cornet.py  cornet_nbody.py  corona.py  differe.py  eyo.py  falmna.py  felt.py  firina.py  fuzzy.py  glaze.py  hakka.py  hati.py  i-s.py  inabikini.py  inakokoa.py  k2maid1.py  k2under1.py  karin.py  koyuki.py  kyoko.py  kyoko_alpha.py  leeme.py  lilou.py  linz.py  linz_nbody.py  liqu.py  lopolykon.py  (+46 more)
src/utils/: __init__.py  imgproc.py
