[tool.poetry]
name = "quiche-pantie-patch"
version = "0.1.0"
description = ""
authors = ["TenteEEEE <wander0055@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
scikit-image = "^0.24.0"
pillow = "^10.4.0"
fastapi = "^0.111.1"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
